test/error/0006-inits5.c

/*
PATTERN: incomplete
PATTERN: c:6:
*/
struct S s = {1};

